Fix inject-cards not showing line-breaks Fix deleting choices Fix changing conditions

--- a/source/presentation_layer/static/css/custom.css
+++ b/source/presentation_layer/static/css/custom.css
@@ -201,6 +201,10 @@ label {
     color: var(--light-gray)
 }
 
+.card-text {
+ white-space: pre-line;
+}
+
 .danger {
     color: var(--danger);
 }
